# rishta-agent

./: pyproject.toml
src/rishta_agent/: __init__.py  main.py
